# wdc-rdfq

./: .gitignore  README.md  dataset_card.md  pyproject.toml
src/rdfq/: main.py
src/rdfq/core/: caching.py  configs.py  filters.py
src/rdfq/old/: bbc_news_main_subpath_only.py  bbc_news_urls.py  bbc_urls.py  compare_dataset.py  date_top_tail.py  date_year_agg.py  delete_dataset.py  load_dataframe_parquet.py  upload_dataset.py
